--- a/style.css
+++ b/style.css
@@ -3,3 +3,16 @@ canvas {
     top: 0;
     left: 0;
 }
+
+body {
+    overflow: hidden;
+    margin: 0;
+}
+
+.ui {
+    position: absolute;
+}
+
+button{
+    margin: 20px;
+}
